--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="game-area"></div>
+    <div class="container">
+        <div id="game-area">   
+        </div>
+        <button id="check-btn">Check Answer</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
