--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  
     <div class="container">
-        <div id="game-area">   
+      <h1>Click the Car</h1>
+        <div id="game-area">
+            
         </div>
         <button id="check-btn">Check Answer</button>
     </div>
