--- a/homepage.html
+++ b/homepage.html
@@ -11,7 +11,7 @@
     <div class="hero">
         <h1>Welcome to CAPTCHA Game</h1>
         <p>A fun and interactive way to test your image selection skills!</p>
-        <a href="game.html" class="cta-button">Play Now</a>
+        <a href="index.html" class="cta-button">Play Now</a>
     </div>
 
     <div class="container">
